--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 :root {
   --shadow: 0 4px 6px -5px rgba(0, 0, 0, 0.15);
   --shadow-lg: 0 8px 10px -5px rgba(0, 0, 0, 0.1);
+  --colortext : white;
+  --colorbackground : rgb(2, 1, 9);
 }
 
 html,
@@ -11,6 +13,7 @@ body {
   font-family: Roboto, Helvetica, Arial, sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  color: var(--colortext);
 }
 
 .section {
@@ -45,7 +48,7 @@ body {
 .hackrcdu h1 {
   font-family: Poppins;
   margin-bottom: 10px;
-  color: white;
+  color: var(--colortext);
 }
 
 .hackrcdu h3 {
@@ -121,7 +124,7 @@ body {
 }
 
 .about-section {
-  background: white;
+  background:linear-gradient( to bottom right,rgb(4, 4, 42),1%,  #000000);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -129,12 +132,13 @@ body {
 }
 
 .themes-section {
-  background: white;
+  background: var(--colorbackground);
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 1.5rem;
   height: 140vh;
+  position: relative;
 }
 
 .highlights {
@@ -165,11 +169,7 @@ body {
 }
 
 .countdown li {
-  background: linear-gradient(
-    to bottom right,
-    #12c2e9,
-    #c471ed
-  );
+  background: var(--colorbackground);
   margin: 5px;
   border-radius: 10px;;
   display: inline-block;
@@ -250,12 +250,13 @@ body {
   display: flex;
   justify-content: center;
   font-size: 1.5rem;
+  background-color: var(--colorbackground);
 }
 
 .themes-section {
   height: 100vh;
   margin-top: 0;
-  background: linear-gradient(to right bottom, rgb(63, 94, 251), rgb(252, 70, 107));
+  background: var(--colorbackground);
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -317,7 +318,7 @@ body {
   bottom: 0;
   height: 80vh;
   width: 80%;
-  background-color: white;
+  background-color: var(--colorbackground);
 }
 .section-1 {
   width: 50%;
